# somnus

./: .all-contributorsrc  .env.example  .env.test  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-entrypoint.sh  flake.nix  pyproject.toml  world_selecter_data.json  world_selector_data.json
.github/workflows/: codeql.yml  docker-build-push.yml  release.yml  tests.yml
somnus/: __main__.py  config.py  discord_provider.py  environment.py  language_handler.py  logger.py
somnus/actions/: ssh.py  start_host.py  start_mc.py  stats.py  stop_host.py  stop_mc.py
somnus/discord_provider/: action_warpper.py  bot.py  busy_provider.py  inactivity_shutdown.py  main.py  update_bot_presence.py  utils.py
somnus/locales/: de-fun.json  de.json  en.json
somnus/logic/: start.py  stop.py  utils.py  world_selecter.py  world_selector.py
src/somnus/: discord_provider.py  environment.py  logger.py
src/somnus/logic/: start.py  stop.py  utils.py
src/somuns/: __main__.py  discord_provider.py  logger.py
src/somuns/logic/: start.py  stop.py  utils.py
tests/: Dockerfile  ssh_prompt_test.py
tests/test_discord_provider/: test_utils.py
tests/test_logic/: test_main.py  test_start.py
