[project]
name = "somnus"
version = "1.1.3"
description = "Discord bot to remotely control and manage multiple Minecraft servers"
authors = [
    { name = "2mal3", email = "56305732+2mal3@users.noreply.github.com" },
    { name = "programmer-44", email = "github@keinbock.mozmail.com" },
]
dependencies = [
    "discord-py==2.*",
    "python-dotenv==1.*",
    "wakeonlan==3.*",
    "ping3==4.*",
    "pexpect==4.*",
    "mcstatus==11.*",
    "pydantic==2.*",
    "aiofiles==24.*",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
# Rules are explained here: https://docs.astral.sh/ruff/rules
select = ["E4", "E7", "E9", "F", "C", "N", "A", "SIM", "PL"]
ignore = []

[tool.rye.scripts]
dev = "python3 -m somnus.__main__"
prod = "python3 -m somnus.__main__"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["somnus"]
